[package]
name = "ram_100mb_sort"
version = "0.1.0"
authors = ["Danil <knightpp@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.11"
rand = "0.7.3"
#pdqsort = "1.0.3"
lexical = "5.2.0"
itertools = "0.9"

[profile.release]
lto = true
